--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: PHP Lint
+name: CI Workflow
 
 on:
   push:
@@ -6,6 +6,7 @@ on:
       - develop
 
 jobs:
+  # --- JOB 1 : LINT ---
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -23,3 +24,36 @@ jobs:
             echo "🔎 Vérification de $file"
             php -l "$file"
           done
+
+  # --- JOB 2 : BUILD IMAGE DOCKER ---
+  build:
+    runs-on: ubuntu-latest
+    needs: lint    # build seulement après lint
+    steps:
+      - name: Checkout du code
+        uses: actions/checkout@v4
+
+      - name: Build de l’image Docker
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/mon-site:latest .
+
+  # --- JOB 3 : PUSH IMAGE DOCKER ---
+  push:
+    runs-on: ubuntu-latest
+    needs: build   # push seulement après build
+    steps:
+      - name: Checkout du code
+        uses: actions/checkout@v4
+
+      - name: Login Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build et Push (sécurité)
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/mon-site:latest
